# backend/src/main/java/com/evaluierung/api/service/VehicleService.java
@@ -1,10 +1,10 @@
 package com.evaluierung.api.service;
 
-import com.evaluierung.api.dto.VehicleDto;
 import com.evaluierung.api.entity.Vehicle;
 import com.evaluierung.api.exception.VehicleNotFoundException;
 import com.evaluierung.api.repository.VehicleRepository;
 import com.evaluierung.api.wrapper.VehiclesWrapper;
+import com.evaluierung.model.VehicleDto;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -34,14 +34,35 @@ public class VehicleService {
     public List<VehicleDto> getVehicles() {
         return vehicleRepository.findAll()
                 .stream()
-                .map(VehicleDto::toDto)
+                .map(vehicle -> {
+                    VehicleDto dto = new VehicleDto();
+                    dto.setId(vehicle.getId().longValue());
+                    dto.setVehicleType(vehicle.getVehicleType());
+                    dto.setCreated(vehicle.getCreated());
+                    dto.setMileage(vehicle.getMileage());
+                    dto.setGearbox(vehicle.getGearbox());
+                    dto.setOwner(vehicle.getOwner().longValue());
+                    dto.setKwAndPs(vehicle.getKwAndPs());
+                    dto.setHek(vehicle.getHek());
+                    dto.setTaxation(vehicle.getTaxation());
+                    return dto;
+                })
                 .collect(Collectors.toList());
     }
 
     public VehicleDto getVehicleById(Long id) {
         Vehicle vehicle = vehicleRepository.findById(id)
                 .orElseThrow(() -> new VehicleNotFoundException(id));
-        return VehicleDto.toDto(vehicle);
+        return new VehicleDto(
+                vehicle.getId(),
+                vehicle.getVehicleType(),
+                vehicle.getCreated(),
+                vehicle.getMileage(),
+                vehicle.getGearbox(),
+                vehicle.getOwner(),
+                vehicle.getKwAndPs(),
+                vehicle.getHek(),
+                vehicle.getTaxation());
     }
 
     public void deleteVehicle(Long id) {
